# pytest-answers

./: LICENSE  README.rst  pyproject.toml  setup.cfg
answers/: test_pytest_answers.test_ones.h5
answers/test_pytest_answers/: test_bytes.h5  test_dict.h5  test_str.h5
answers/tests/: test_pytest_answers.test_list_of_arrays.h5  test_pytest_answers.test_ones.h5
pytest_answers/: plugin.py
tests/: test_pytest_answers.py
