[metadata]
license_file = LICENSE
name = pytest-answers
version = 0.1
url = https://github.com/data-exp-lab/pytest-answers
author = Kacper Kowalik
author_email = xarthisius.kk@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license = BSD 3-Clause
description = pytest plugin to help with answer testing
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires =
    pytest

[options.entry_points]
pytest11 =
    pytest_answers = pytest_answers.plugin

[options.extras_require]
test =
    pytest-cov

[tool:pytest]
testpaths = "tests"

[flake8]
max-line-length = 100
ignore = W504

[pycodestyle]
max_line_length = 100

[isort]
balanced_wrapping = True
length_sort = False
length_sort_sections = stdlib
line_length = 100
